@@ -1,1 +1,18 @@
 
+<h2> Mini Web Project </h2> 
+
+<h3> Description </h3>
+ Investigate the capabilities of JavaFX’s WebView control and WebEngine class, then create a JavaFX app that provides basic web browsing capabilities.
+
+<h3> Software </h3>
+<h4>JavaFX SDK 11.0.2 -  https://openjfx.io/ <br>
+Scene Builder 11.0.0 - https://gluonhq.com/products/scene-builder/ <br>
+IntelliJ IDEA - https://www.jetbrains.com/idea/ <br>
+Instruction to set up - https://openjfx.io/openjfx/docs/#introduction <br> </h4>
+<h4>For VM options: </h4>--module-path ${PATH_TO_JAVAFX} --add-modules=javafx.swing,javafx.graphics,javafx.fxml,javafx.media,javafx.web --add-reads javafx.graphics=ALL-UNNAMED --add-opens javafx.controls/com.sun.javafx.charts=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.css=ALL-UNNAMED --add-opens javafx.base/com.sun.javafx.runtime=ALL-UNNAMED 
+
+<h3> App Screenshots </h3>
+
+![](img/Web1.JPG)
+#
+![](img/Web2.JPG)
